--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -140,13 +140,13 @@
                     text-align: left;
                     // font-size: 2rem;
                     margin: .5rem 0 0;
-                    opacity: 0;
                     line-height: 1.3;
-                    animation: hero-span 5s ease-in-out;
-                    animation-fill-mode: forwards;
-                    animation-delay: calc(6.5s + .5s * var(--s));
-                    transition: 1s;
-                    transform-style: preserve-3d;
+                    // opacity: 0;
+                    // animation: hero-span 5s ease-in-out;
+                    // animation-fill-mode: forwards;
+                    // animation-delay: calc(6.5s + .5s * var(--s));
+                    // transition: 1s;
+                    // transform-style: preserve-3d;
                     @media (min-width: 768px) {
                         font-size: 3rem;
                     }
@@ -165,15 +165,15 @@
                 // "AKA" SPAN
                 #aka {
                     span {
-                        font-size: 2rem;
-                        position: relative;
                         display: inline-block;
-                        animation: aka 5s ease alternate;
-                        animation-delay: 8.5s;
-                        animation-fill-mode: forwards;
+                        font-size: 1.25rem;
+                        position: relative;
                         color: #ddd;
-                        opacity: 0;
-                        transform: scale(0.7);
+                        // opacity: 0;
+                        // animation: aka 5s ease alternate;
+                        // animation-delay: 8.5s;
+                        // animation-fill-mode: forwards;
+                        // transform: scale(0.7);
                     }
 
                     @keyframes aka {
@@ -209,12 +209,12 @@
             // border-bottom-right-radius: 1rem;
             border: none;
             outline: none;
-            opacity: 0;
-            transform: translateX(-10vw);
-            transform-style: preserve-3d;
-            animation: show-cta 3s ease-in-out 9.5s;
-            animation-fill-mode: forwards;
-            transition: .3s linear;
+            // opacity: 0;
+            // transform: translateX(-10vw);
+            // transform-style: preserve-3d;
+            // animation: show-cta 3s ease-in-out 9.5s;
+            // animation-fill-mode: forwards;
+            // transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
             z-index: 2;
@@ -282,7 +282,7 @@
                 font-size: 2.5rem;
                 font-weight: 500;
                 animation: animate 3s ease-in-out infinite;
-                animation-delay: calc(1s + .2s * var(--i));
+                animation-delay: calc(8s + .2s * var(--i));
 
                 /* cta keyframes*/
                 @keyframes animate {
