--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -87,14 +87,16 @@
                 height: 100%;
                 object-fit: cover;
                 z-index: -1;
-                animation: intro 7s ease-out 3s;
+                object-position: 15%;
+                animation: intro 4s ease-out 7s;
                 @keyframes intro {
                     0% {
                         // transform: scale(1.5);
-                        transform: scale(2.5);
+                        // transform: scale(2.5);
+                        object-position: 40%;
                     }
                     100% {
-                        transform: scale(1);
+                        // transform: scale(1);
                     }
                 }
             }
@@ -141,12 +143,12 @@
                     // font-size: 2rem;
                     margin: .5rem 0 0;
                     line-height: 1.3;
-                    // opacity: 0;
-                    // animation: hero-span 5s ease-in-out;
-                    // animation-fill-mode: forwards;
-                    // animation-delay: calc(6.5s + .5s * var(--s));
-                    // transition: 1s;
-                    // transform-style: preserve-3d;
+                    opacity: 0;
+                    animation: hero-span 5s ease-in-out;
+                    animation-fill-mode: forwards;
+                    animation-delay: calc(9s + .5s * var(--s));
+                    transition: 1s;
+                    transform-style: preserve-3d;
                     @media (min-width: 768px) {
                         font-size: 3rem;
                     }
@@ -169,10 +171,10 @@
                         font-size: 1.25rem;
                         position: relative;
                         color: #ddd;
-                        // opacity: 0;
-                        // animation: aka 5s ease alternate;
-                        // animation-delay: 8.5s;
-                        // animation-fill-mode: forwards;
+                        opacity: 0;
+                        animation: aka 5s ease alternate;
+                        animation-delay: 11.5s;
+                        animation-fill-mode: forwards;
                         // transform: scale(0.7);
                     }
 
@@ -209,12 +211,12 @@
             // border-bottom-right-radius: 1rem;
             border: none;
             outline: none;
-            // opacity: 0;
-            // transform: translateX(-10vw);
-            // transform-style: preserve-3d;
-            // animation: show-cta 3s ease-in-out 9.5s;
-            // animation-fill-mode: forwards;
-            // transition: .3s linear;
+            opacity: 0;
+            transform: translateX(-10vw);
+            transform-style: preserve-3d;
+            animation: show-cta 3s ease-in-out 13s;
+            animation-fill-mode: forwards;
+            transition: .3s linear;
             cursor: pointer;
             -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
             z-index: 2;
