--- a/css/style.css
+++ b/css/style.css
@@ -3335,15 +3335,15 @@ hamburger
   display: block;
 }
 
-* {
+*, ::before, ::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
 }
 
 html {
   scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
