--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,17 +11,17 @@
 @import 'work';
 @import 'about';
 @import 'footer';
-* {
+*, ::before, ::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: $font-content;
     // border: 1px solid red;
 }
 
 
 html {
     scroll-behavior: smooth;
+    font-family: $font-content;
     // scroll-padding-top: 5vh;
 }
 body {
