--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -271,7 +271,7 @@
                 border: none;
                 background: $button-crimson-hover;
                 // background: linear-gradient(0deg, #dc134c, #581212);
-                box-shadow: $box-dark-top-sm;
+                box-shadow: $box-light-top-sm-hover;
             }
 
             // end of button shadows
