--- a/css/style.css
+++ b/css/style.css
@@ -199,11 +199,11 @@ hamburger
 }
 .top-link::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 .top-link::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 .top-link i {
@@ -286,11 +286,11 @@ hamburger
   z-index: -1;
 }
 .btn::before {
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #000a, rgba(0, 0, 0, 0.3));
 }
 .btn::after {
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1050,7 +1050,7 @@ hamburger
   outline: none;
 }
 #home .hero #cta-header::before {
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 #home .hero #cta-header::after {
@@ -1062,7 +1062,7 @@ hamburger
   outline: none;
   border: none;
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
 }
 #home .hero #cta-header span {
   position: relative;
@@ -1284,11 +1284,11 @@ hamburger
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1501,7 +1501,6 @@ hamburger
   font-family: "Kanit", sans-serif;
   letter-spacing: 0.15rem;
   position: relative;
-  overflow: hidden;
   isolation: isolate;
 }
 #skills .dropdown .dropbtn::before, #skills .dropdown .dropbtn::after {
@@ -1519,13 +1518,12 @@ hamburger
 }
 #skills .dropdown .dropbtn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 #skills .dropdown .dropbtn::after {
-  background: linear-gradient(0deg, #dc134c, #3f0d0d);
   background: linear-gradient(0deg, #485563, #20262e);
   opacity: 0;
-  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.2), inset -2px -2px 2px rgba(221, 221, 221, 0.3), 3px 3px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
 }
 #skills .dropdown .dropbtn.active {
   transform: scale(0.98);
@@ -1633,7 +1631,7 @@ hamburger
   width: 100%;
   border-radius: 10px;
   height: 100%;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
   z-index: 2;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
@@ -1940,7 +1938,7 @@ hamburger
 }
 #contact .contact .contact-items .contact-item .contact-info a::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 #contact .contact .contact-items .contact-item .contact-info a::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
@@ -2138,7 +2136,7 @@ hamburger
   font-size: 0.9rem;
   transition: 0.3s;
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
   border-radius: 0.5rem;
   padding: 0.25rem 0.5rem;
   margin-left: 0.5rem;
@@ -2309,7 +2307,7 @@ hamburger
   color: #f4f4f4;
   padding: 0.7rem 0.5rem;
   text-transform: capitalize;
-  margin: 0 auto 0.5rem;
+  margin: 0 auto 0.8rem;
   display: block;
   text-align: center;
   text-decoration: none;
@@ -2332,11 +2330,11 @@ hamburger
 }
 #work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 #work .work-items .work-item .view-site-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -2496,7 +2494,7 @@ hamburger
   position: absolute;
   opacity: 0;
   z-index: 20;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 .about .col-right .about-title h2 {
   display: inline-block;
@@ -2536,7 +2534,7 @@ hamburger
 }
 .about .col-right button {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
   color: #fff;
   margin: 1rem auto;
   padding: 0.7rem;
@@ -2545,8 +2543,12 @@ hamburger
   border-radius: 0.5rem;
   border: none;
   text-transform: capitalize;
+  letter-spacing: 0.05rem;
   transition: 0.3s;
   position: relative;
+}
+.about .col-right button.open {
+  letter-spacing: normal;
 }
 .about .col-right button.open::after {
   position: absolute;
@@ -2559,12 +2561,13 @@ hamburger
   width: 100%;
   height: 100%;
   opacity: 1;
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 2px 3px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
   transition: 0.2s;
 }
 .about .col-right button:hover {
   transform: scale(0.97);
+  letter-spacing: normal;
 }
 .about .col-right .article-container {
   overflow: hidden;
@@ -2605,7 +2608,7 @@ hamburger
   color: #ead2a1;
   padding: 0 0.1em;
   margin-right: 0.1em;
-  border-radius: 2px;
+  border-radius: 0.25rem;
   box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
 .about .col-right .article-container article.about-article p#intro {
@@ -2915,7 +2918,7 @@ hamburger
 }
 #footer .footer form button::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 #footer .footer form button::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
@@ -3010,7 +3013,7 @@ hamburger
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px #000a, 2px 2px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
 }
 #footer .footer .socialMedia-links .socialMedia-item a i {
   color: #fffa;
