--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -185,6 +185,7 @@
                                     display: block;
                                     font-size: 1.05rem;
                                     font-weight: 400;
+                                    letter-spacing: .05rem;
                                     // border-radius: 5px;
                                     font-family: $font-content;
                                     font-family: $font-title;
