--- a/css/style.css
+++ b/css/style.css
@@ -583,6 +583,7 @@ hamburger
     display: block;
     font-size: 1.05rem;
     font-weight: 400;
+    letter-spacing: 0.05rem;
     font-family: "Montserrat", sans-serif;
     font-family: "Kanit", sans-serif;
     text-transform: capitalize;
