--- a/css/style.css
+++ b/css/style.css
@@ -2591,12 +2591,13 @@ hamburger
   }
 }
 .about .col-right .article-container article.about-article p {
-  padding: 0.5rem;
+  padding-right: 0.25rem;
   margin-bottom: 1rem;
   text-overflow: ellipsis;
   text-align: left;
   z-index: 1;
   font-size: 0.95rem;
+  font-size: 1rem;
   font-family: "Montserrat", sans-serif;
   color: #20262e;
   color: #000;
