--- a/css/style.css
+++ b/css/style.css
@@ -2263,7 +2263,6 @@ hamburger
 }
 #work .work-items .work-item .work-title {
   text-align: center;
-  text-transform: capitalize;
 }
 #work .work-items .work-item .work-title h2 {
   text-transform: capitalize;
@@ -2275,6 +2274,13 @@ hamburger
 #work .work-items .work-item .work-title p {
   color: #000;
   font-size: 1rem;
+}
+#work .work-items .work-item .work-title p a {
+  color: #dc143c;
+  transition: 0.25s;
+}
+#work .work-items .work-item .work-title p a:hover {
+  color: #000;
 }
 #work .work-items .work-item figure {
   margin: 5vh auto;
