--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 @import 'utilities';
 @import 'header';
 @import 'hero';
+@import 'cube';
 @import 'skills';
 @import 'contact';
 @import 'projects';
