--- a/css/style.css
+++ b/css/style.css
@@ -2755,20 +2755,11 @@ hamburger
   overflow: hidden;
 }
 .about .col-right .article-container article.about-article {
-  padding: 0.5em 1em;
-  height: 17vh;
   transition: 0.3s ease;
 }
 @media (max-width: 768px) {
   .about .col-right .article-container article.about-article {
-    height: 23vh;
     transition: 0.3s ease;
-    padding: 0.5em 0;
-  }
-}
-@media (max-width: 374px) {
-  .about .col-right .article-container article.about-article {
-    height: 31vh;
   }
 }
 .about .col-right .article-container article.about-article p {
@@ -2799,7 +2790,7 @@ hamburger
 }
 .about .col-right .article-container article.about-article p.about-body {
   transition: opacity 0.25s ease;
-  opacity: 0;
+  opacity: 1;
 }
 @media (min-width: 768px) {
   .about .col-right .article-container article.about-article p {
@@ -2811,20 +2802,6 @@ hamburger
 }
 .about .col-right .article-container article.about-article p .fcc-link:hover {
   color: violet;
-}
-.about .col-right .article-container article.about-article.active {
-  height: 50vh;
-  transition: 0.5s ease;
-  overflow-y: auto;
-}
-@media (min-width: 768px) {
-  .about .col-right .article-container article.about-article.active {
-    height: 45vh;
-  }
-}
-.about .col-right .article-container article.about-article.active .about-body {
-  transition: opacity 2s ease;
-  opacity: 1;
 }
 .about .col-right .article-container article#cv {
   display: flex;
@@ -2885,9 +2862,9 @@ hamburger
   opacity: 1;
 }
 .about .col-left {
-  display: none;
   width: 100%;
   height: 360px;
+  height: 70vh;
   margin-top: 0;
   z-index: 20;
   transform-style: preserve-3d;
@@ -2895,28 +2872,22 @@ hamburger
 @media (min-width: 1024px) {
   .about .col-left {
     width: 100%;
-    height: 550px;
+    height: 70vh;
   }
 }
 .about .col-left .about-img {
   height: 100%;
-  width: 90%;
+  width: 100%;
   position: relative;
   border-radius: 10px;
   border: none;
-  outline: none;
-  margin-top: 5vh;
   transition: 0.5s ease;
   transform: preserve-3d;
   cursor: pointer;
   overflow: hidden;
 }
-@media (min-width: 1024px) {
-  .about .col-left .about-img {
-    margin-top: 0;
-    height: 100%;
-    width: 80%;
-  }
+.about .col-left .about-img img {
+  display: none;
 }
 .about .col-left .about-img::before, .about .col-left .about-img::after {
   font-size: 1em;
@@ -2931,9 +2902,13 @@ hamburger
   padding: 0.3em;
   border-radius: 10px;
   transition: 1s ease;
-  box-shadow: inset 5px 5px 5px rgba(221, 221, 221, 0.5) inset -10px -10px 10px rgba(0, 0, 0, 0.2);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+}
+@media (max-width: 768px) {
+  .about .col-left .about-img::before, .about .col-left .about-img::after {
+    background-size: cover;
+  }
 }
 .about .col-left .about-img::before {
   content: "Boitumelo Sempe";
