--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,21 +1,19 @@
 // about 
 .about {
-    // about container
+    // FLEX CONTAINER
     flex-direction: column-reverse;
-    // big screen layout
+    // border: 2px solid red;
+    text-align: center;
+    margin: 0 auto ;
+    padding: 0 5vw ;
+    background-color: $background-light;
+    // DESKTOP
     @media (min-width: 768px){
         flex-direction: row;
         align-items: center;
         padding: 5vh 5vw;
     }
-    // end of big screen layout
-    text-align: center;
-    margin: 0 auto ;
-    padding: 0 5vw ;
-    background-color: $background-light;
-    
-    // end of about container
-    // col-right
+    // COL RIGHT = ATITLE & ARTICLE
     .col-right {
         // section title
         .section-title {
@@ -161,19 +159,19 @@
             overflow: hidden;
             article {
                 &.about-article {
-                    padding: .5em 1em;
-                    height: 17vh;
+                    // padding: .5em 1em;
+                    // height: 17vh;
                     // overflow: hidden;
                     transition: .3s ease;
 
                     @media (max-width: 768px) {
-                        height: 23vh;
+                        // height: 23vh;
                         transition: .3s ease;
-                        padding: .5em 0;
+                        // padding: .5em 0;
                     }
 
                     @media (max-width: 374px) {
-                        height: 31vh;
+                        // height: 31vh;
                     }
 
                     // about me paragraph
@@ -209,7 +207,7 @@
 
                         &.about-body {
                             transition: opacity .25s ease;
-                            opacity: 0;
+                            opacity: 1;
                         }
 
                         @media (min-width:768px) {
@@ -225,22 +223,22 @@
                         }
                     }
                     // INCREASE VIEW HEIGHT AND SHOW(OPACITY) REST OF ARTICLE WITH ACTIVE CLASS
-                    &.active {
-                        height: 50vh;
-                        transition: .5s ease;
+                    // &.active {
+                    //     height: 50vh;
+                    //     transition: .5s ease;
 
-                        @media (min-width: 768px) {
-                            height: 45vh;
-                        }
+                    //     @media (min-width: 768px) {
+                    //         height: 45vh;
+                    //     }
 
-                        overflow-y: auto;
+                    //     overflow-y: auto;
 
-                        .about-body {
-                            transition: opacity 2s ease;
-                            // display: block;
-                            opacity: 1;
-                        }
-                    }
+                    //     .about-body {
+                    //         transition: opacity 2s ease;
+                    //         // display: block;
+                    //         opacity: 1;
+                    //     }
+                    // }
 
 
                     // end of about me paragraph
@@ -335,41 +333,44 @@
 
     }
     // end of col-right
-    // col-left (about image)
+    // COL LEFT = ABOUT IMAGE(S)
     .col-left {
-        display: none;
+        // display: none;
+        // border: 2px solid red;
         @media (min-width: 1024px) {
             width: 100%;
-            height: 550px;
+            height: 70vh;
         }
         // display: flex;
         // justify-content: center;
         // align-items: center;
         width: 100%;
         height: 360px;
+        height: 70vh;
         margin-top: 0;
         z-index: 20;
         transform-style: preserve-3d;
         // about images
         .about-img {
-            
+            // border: 2px solid red;
             @media (min-width: 1024px){
-                margin-top: 0;
-                height: 100%;
-                width: 80%;
+                // margin-top: 0;
+                // height: 100%;
+                // width: 80%;
             }
             height: 100%;
-            width: 90%;
+            width: 100%;
             position: relative;
             border-radius: 10px;
             border: none;
-            outline: none;
-            margin-top: 5vh;
             transition: .5s ease;
             transform: preserve-3d;
             cursor: pointer;
             overflow: hidden;
 
+            img {
+                display: none;
+            }
             &::before,
             &::after {
                 font-size: 1em;
@@ -384,9 +385,11 @@
                 padding: .3em;
                 border-radius: 10px;
                 transition: 1s ease;
-                box-shadow: $box-light-top-lg;
                 background-repeat: no-repeat;
-                background-size: cover;
+                background-size: contain;
+                @media (max-width: 768px) {
+                    background-size: cover;
+                }
             }
 
         &::before {
