--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -153,41 +153,27 @@
             }
         }
         // end of read more button
-        // article
+        // ARTICLE CONTAINER
         .article-container {
             // border: 2px solid red;
             overflow: hidden;
             article {
                 &.about-article {
-                    // padding: .5em 1em;
-                    // height: 17vh;
                     // overflow: hidden;
                     transition: .3s ease;
 
-                    @media (max-width: 768px) {
-                        // height: 23vh;
-                        transition: .3s ease;
-                        // padding: .5em 0;
-                    }
-
-                    @media (max-width: 374px) {
-                        // height: 31vh;
-                    }
-
-                    // about me paragraph
+                    // ABOUT P
                     p {
                         // border: 2px solid red;
+                        color: $overlay-blue-darker;
                         padding-right: .25rem;
                         margin-bottom: 1rem;
                         text-overflow: ellipsis;
                         text-align: left;
                         z-index: 1;
-                        font-size: .95rem;
                         font-size: 1rem;
-                        font-family: $font-content;
-                        color: $overlay-blue-darker;
-                        color: #000;
                         font-weight: 400;
+                        z-index: 2;
 
 
                         &#intro::first-letter {
@@ -209,17 +195,10 @@
                             transition: opacity .25s ease;
                             opacity: 1;
                         }
-
-                        @media (min-width:768px) {
-                            font-size: 1rem;
-                        }
-
-                        .fcc-link {
-                            color: $span-crimson;
-
-                            &:hover {
-                                color: $span-violet;
-                            }
+                        i {
+                            // position: absolute;
+                            font-size: 2rem;
+                            color: $overlay-blue-light;
                         }
                     }
                     // INCREASE VIEW HEIGHT AND SHOW(OPACITY) REST OF ARTICLE WITH ACTIVE CLASS
