--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -351,7 +351,7 @@
                             letter-spacing: .15em;
                             text-decoration: none;
                             color: $text-white;
-                            text-transform: uppercase;
+                            text-transform: capitalize;
                             // padding: 1em;
                             display: block;
                             text-align: left;
