--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -171,7 +171,7 @@
                         text-overflow: ellipsis;
                         text-align: left;
                         z-index: 1;
-                        font-size: 1rem;
+                        font-size: .925rem;
                         font-weight: 400;
                         z-index: 2;
 
