--- a/css/style.css
+++ b/css/style.css
@@ -2754,21 +2754,22 @@ hamburger
 .about .col-right .article-container {
   overflow: hidden;
 }
-.about .col-right .article-container article.about-article {
-  transition: 0.3s ease;
-}
-.about .col-right .article-container article.about-article p {
+.about .col-right .article-container article p {
   color: #20262e;
   padding-right: 0.25rem;
   margin-bottom: 1rem;
   text-overflow: ellipsis;
   text-align: left;
   z-index: 1;
-  font-size: 0.925rem;
+  font-size: 0.95rem;
   font-weight: 400;
   z-index: 2;
+  transition: 1.5s;
 }
-.about .col-right .article-container article.about-article p#intro::first-letter {
+.about .col-right .article-container article p a {
+  background-color: #f4f4f4;
+}
+.about .col-right .article-container article p#intro::first-letter {
   font-size: 2.5em;
   float: left;
   background: #29323c;
@@ -2778,16 +2779,20 @@ hamburger
   border-radius: 0.25rem;
   box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
-.about .col-right .article-container article.about-article p#intro {
+.about .col-right .article-container article p#intro {
   font-weight: 500;
 }
-.about .col-right .article-container article.about-article p.about-body {
-  transition: opacity 0.25s ease;
-  opacity: 1;
-}
-.about .col-right .article-container article.about-article p i {
+.about .col-right .article-container article p i {
   font-size: 2rem;
   color: #485563;
+}
+.about .col-right .article-container article p.io-item {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+.about .col-right .article-container article p.active-item {
+  opacity: 1;
+  transform: translateY(0);
 }
 .about .col-right .article-container article#cv {
   display: flex;
