--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -158,73 +158,54 @@
             // border: 2px solid red;
             overflow: hidden;
             article {
-                &.about-article {
-                    // overflow: hidden;
-                    transition: .3s ease;
+                // ABOUT P
+                p {
+                    // border: 2px solid red;
+                    color: $overlay-blue-darker;
+                    padding-right: .25rem;
+                    margin-bottom: 1rem;
+                    text-overflow: ellipsis;
+                    text-align: left;
+                    z-index: 1;
+                    font-size: .95rem;
+                    font-weight: 400;
+                    z-index: 2;
+                    transition: 1.5s;
 
-                    // ABOUT P
-                    p {
-                        // border: 2px solid red;
-                        color: $overlay-blue-darker;
-                        padding-right: .25rem;
-                        margin-bottom: 1rem;
-                        text-overflow: ellipsis;
-                        text-align: left;
-                        z-index: 1;
-                        font-size: .925rem;
-                        font-weight: 400;
-                        z-index: 2;
-
-
-                        &#intro::first-letter {
-                            font-size: 2.5em;
-                            float: left;
-                            background: $overlay-blue-dark;
-                            color: $span-gold;
-                            padding: 0 .1em;
-                            margin-right: .1em;
-                            border-radius: .25rem;
-                            box-shadow: 3px 3px 0 rgba(0, 0, 0, .100);
-                        }
-
-                        &#intro {
-                            font-weight: 500;
-                        }
-
-                        &.about-body {
-                            transition: opacity .25s ease;
-                            opacity: 1;
-                        }
-                        i {
-                            // position: absolute;
-                            font-size: 2rem;
-                            color: $overlay-blue-light;
-                        }
+                    a {
+                        background-color: #f4f4f4;
+                        
                     }
-                    // INCREASE VIEW HEIGHT AND SHOW(OPACITY) REST OF ARTICLE WITH ACTIVE CLASS
-                    // &.active {
-                    //     height: 50vh;
-                    //     transition: .5s ease;
-
-                    //     @media (min-width: 768px) {
-                    //         height: 45vh;
-                    //     }
-
-                    //     overflow-y: auto;
-
-                    //     .about-body {
-                    //         transition: opacity 2s ease;
-                    //         // display: block;
-                    //         opacity: 1;
-                    //     }
-                    // }
 
 
-                    // end of about me paragraph
-                    // small screens
-                    // @media (max-width: 768px) {
-                    //     height: 25vh;
-                    // }
+                    &#intro::first-letter {
+                        font-size: 2.5em;
+                        float: left;
+                        background: $overlay-blue-dark;
+                        color: $span-gold;
+                        padding: 0 .1em;
+                        margin-right: .1em;
+                        border-radius: .25rem;
+                        box-shadow: 3px 3px 0 rgba(0, 0, 0, .100);
+                    }
+
+                    &#intro {
+                        font-weight: 500;
+                    }
+                    i {
+                        // position: absolute;
+                        font-size: 2rem;
+                        color: $overlay-blue-light;
+                    }
+                    // DATA SCROLL
+                    &.io-item {
+                            opacity: 0;
+                            transform: translateY(2rem);
+                    }
+                    &.active-item {
+                        opacity: 1;
+                        transform: translateY(0);
+                }
                 }
 
                 // links
