--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -174,6 +174,8 @@
 
                     a {
                         background-color: #f4f4f4;
+                        color: $overlay-blue-darker;
+                        font-weight: 500;
                         
                     }
 
