--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -160,7 +160,7 @@ hamburger
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
+    // overflow: hidden;
 }
 // end of section containers 
 
