--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -7,6 +7,9 @@
     margin: 0 auto ;
     padding: 0 5vw ;
     background-color: $background-light;
+    position: relative;
+    min-height: 100vh;
+    
     // DESKTOP
     @media (min-width: 768px){
         flex-direction: row;
@@ -312,6 +315,8 @@
         @media (min-width: 1024px) {
             width: 100%;
             height: 70vh;
+            position: sticky;
+            top: 15vh;
         }
         // display: flex;
         // justify-content: center;
