--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -170,7 +170,7 @@
                     text-overflow: ellipsis;
                     text-align: left;
                     z-index: 1;
-                    font-size: .95rem;
+                    font-size: 1rem;
                     font-weight: 400;
                     z-index: 2;
                     transition: 1.5s;
