--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -5,7 +5,7 @@
     // border: 2px solid red;
     text-align: center;
     margin: 0 auto ;
-    padding: 0 5vw ;
+    padding: 5vh 5vw;
     background-color: $background-light;
     position: relative;
     min-height: 100vh;
