--- a/css/style.css
+++ b/css/style.css
@@ -1494,6 +1494,7 @@ hamburger
   box-shadow: inset 0 0 0.5em #000a;
   display: grid;
   place-items: center;
+  transition: 0.25s;
 }
 .cube .left p, .cube .left a,
 .cube .right p,
@@ -1505,6 +1506,7 @@ hamburger
   font-family: "Kanit", sans-serif;
   font-size: 0.25em;
   text-transform: uppercase;
+  transition: 0.25s;
 }
 .cube .left:hover,
 .cube .right:hover,
@@ -1520,7 +1522,7 @@ hamburger
 }
 .cube .front {
   transform: translateZ(1em);
-  background: linear-gradient(0deg, #1f252d 30%, #343f4c 70%);
+  background-color: #29323c;
 }
 .cube .front a {
   color: #ead2a1;
