skill overflow and about img sticky

--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,6 +1,9 @@
 
 // skills
 #skills {
+    border:1px solid red;
+    overflow: hidden;
+
     // skills container
     .skills {
         flex-direction: column;
