--- a/css/style.css
+++ b/css/style.css
@@ -1585,6 +1585,10 @@ hamburger
   background-size: 100%, 1em 1em;
 }
 
+#skills {
+  border: 1px solid red;
+  overflow: hidden;
+}
 #skills .skills {
   flex-direction: column;
   justify-content: flex-start;
@@ -2878,7 +2882,7 @@ hamburger
     width: 100%;
     height: 70vh;
     position: sticky;
-    top: 15vh;
+    top: 20vh;
   }
 }
 .about .col-left .about-img {
