--- a/css/style.css
+++ b/css/style.css
@@ -1430,7 +1430,7 @@ hamburger
 }
 @keyframes scene {
   to {
-    transform: rotateY(360deg);
+    transform: rotateY(-360deg);
   }
 }
 
@@ -3545,7 +3545,7 @@ section {
 section .section-title {
   font-size: 2.25rem;
   font-weight: 400;
-  color: #000;
+  color: #29323c;
   max-width: 100vw;
   margin: 5vh 0 10vh;
   text-transform: uppercase;
