--- a/css/style.css
+++ b/css/style.css
@@ -198,11 +198,11 @@ hamburger
 }
 .top-link::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .top-link::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 .top-link i {
@@ -285,11 +285,11 @@ hamburger
   z-index: -1;
 }
 .btn::before {
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #000a, rgba(0, 0, 0, 0.3));
 }
 .btn::after {
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1050,7 +1050,7 @@ hamburger
   outline: none;
 }
 #home .hero #cta-header::before {
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
 }
 #home .hero #cta-header::after {
@@ -1062,7 +1062,7 @@ hamburger
   outline: none;
   border: none;
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
 }
 #home .hero #cta-header span {
   position: relative;
@@ -1284,11 +1284,11 @@ hamburger
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #menu .menu-section .menu-content .menu-cta .page-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -1698,12 +1698,12 @@ hamburger
 }
 #skills .dropdown .dropbtn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #skills .dropdown .dropbtn::after {
   background: linear-gradient(0deg, #485563, #20262e);
   opacity: 0;
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
 }
 #skills .dropdown .dropbtn.active {
   transform: scale(0.98);
@@ -1811,7 +1811,7 @@ hamburger
   width: 100%;
   border-radius: 10px;
   height: 100%;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
   z-index: 2;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon {
@@ -2118,7 +2118,7 @@ hamburger
 }
 #contact .contact .contact-items .contact-item .contact-info a::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #contact .contact .contact-items .contact-item .contact-info a::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
@@ -2316,7 +2316,7 @@ hamburger
   font-size: 0.9rem;
   transition: 0.3s;
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 0.5rem;
   padding: 0.25rem 0.5rem;
   margin-left: 0.5rem;
@@ -2516,11 +2516,11 @@ hamburger
 }
 #work .work-items .work-item .view-site-btn::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #work .work-items .work-item .view-site-btn::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
   opacity: 0;
 }
 @media (min-width: 820px) {
@@ -2682,7 +2682,7 @@ hamburger
   position: absolute;
   opacity: 0;
   z-index: 20;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .about .col-right .about-title h2 {
   display: inline-block;
@@ -2722,7 +2722,7 @@ hamburger
 }
 .about .col-right button {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
   color: #fff;
   margin: 1rem auto;
   padding: 0.7rem;
@@ -2749,7 +2749,7 @@ hamburger
   width: 100%;
   height: 100%;
   opacity: 1;
-  box-shadow: inset 2px 2px 3px #000a, inset -2px -2px 3px rgba(221, 221, 221, 0.25), 0px 4px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
   transition: 0.2s;
 }
@@ -3091,7 +3091,7 @@ hamburger
 }
 #footer .footer form button::before {
   background: linear-gradient(0deg, #3f0d0d, #dc134c);
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
 #footer .footer form button::after {
   background: linear-gradient(0deg, #dc134c, #3f0d0d);
@@ -3117,7 +3117,7 @@ hamburger
 }
 @media (min-width: 1024px) {
   #footer .footer .socialMedia-links {
-    width: 50%;
+    width: 70%;
     border-radius: 5px;
   }
 }
@@ -3126,38 +3126,34 @@ hamburger
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1rem;
   }
 }
 #footer .footer .socialMedia-links .socialMedia-item {
-  border: 2px solid rgba(0, 0, 0, 0.5);
-  background-color: #20262e;
-  padding: 0.5rem 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  padding: 0.5rem 0 5vh;
   border-radius: 0.5rem;
   overflow: hidden;
-  margin: 0.5em 0.1em 1em 0.1em;
+  margin: 1rem auto;
   position: relative;
   transition: 0.3s;
+  width: 100%;
 }
-#footer .footer .socialMedia-links .socialMedia-item .link-icon {
+#footer .footer .socialMedia-links .socialMedia-item p {
   font-size: 1.35rem;
   text-transform: capitalize;
   color: #f4f4f4;
   font-weight: 300;
-  position: absolute;
-  left: 50%;
-  top: 50%;
   text-align: center;
   font-family: "Kanit", sans-serif;
-  width: 100%;
-  transform: translate(-50%, -50%);
   transition: 1s ease;
 }
 #footer .footer .socialMedia-links .socialMedia-item a {
   background: #29323c;
   display: block;
   text-align: center;
-  padding: 0.3em 0.5em 0.3em;
-  width: 80%;
+  padding: 0.5rem;
+  width: 90%;
   margin: 0 auto;
   color: #fff;
   text-transform: capitalize;
@@ -3165,20 +3161,25 @@ hamburger
   border-radius: 0.5rem;
   position: relative;
   transition: 0.2s ease;
-  transform: translateX(150%);
-  transition: 1s ease;
+  isolation: isolate;
+  transition: 0.25s ease;
 }
 @media (min-width: 768px) {
   #footer .footer .socialMedia-links .socialMedia-item a {
-    width: 85%;
+    width: 80%;
   }
 }
 @media (min-width: 1024px) {
   #footer .footer .socialMedia-links .socialMedia-item a {
-    width: 85%;
+    width: 80%;
   }
 }
-#footer .footer .socialMedia-links .socialMedia-item a::after {
+#footer .footer .socialMedia-links .socialMedia-item a i {
+  color: #fffa;
+  padding: 0.5em;
+  transition: 0.5s;
+}
+#footer .footer .socialMedia-links .socialMedia-item a:before, #footer .footer .socialMedia-links .socialMedia-item a::after {
   position: absolute;
   content: "";
   top: 0;
@@ -3186,55 +3187,96 @@ hamburger
   width: 100%;
   height: 100%;
   border-radius: 0.5rem;
-  box-shadow: inset 2px 2px 3px rgba(221, 221, 221, 0.25), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 2px rgba(0, 0, 0, 0.15);
+  transition: 0.25s;
+  z-index: -1;
 }
-#footer .footer .socialMedia-links .socialMedia-item a i {
-  color: #fffa;
-  padding: 0.5em;
-  transition: 0.5s;
+#footer .footer .socialMedia-links .socialMedia-item a::before {
+  box-shadow: inset 2px 2px 3px rgba(225, 225, 225, 0.2), inset -2px -2px 3px rgba(0, 0, 0, 0.25), 4px 4px 4px rgba(0, 0, 0, 0.15);
 }
-#footer .footer .socialMedia-links .socialMedia-item a:active {
-  transform: scale(0.97);
-}
-#footer .footer .socialMedia-links .socialMedia-item:hover {
-  transform: scale(0.98);
-  background-color: #20262e;
-  border-color: rgba(255, 255, 255, 0.25);
-}
-#footer .footer .socialMedia-links .socialMedia-item:hover a {
-  background: #485563;
-  transform: translateX(0);
-  opacity: 1;
-}
-#footer .footer .socialMedia-links .socialMedia-item:hover a i {
-  color: #fff;
-}
-#footer .footer .socialMedia-links .socialMedia-item:hover .link-icon {
+#footer .footer .socialMedia-links .socialMedia-item a::after {
   opacity: 0;
+  box-shadow: inset 2px 2px 3px rgba(0, 0, 0, 0.25), inset -2px -2px 3px rgba(225, 225, 225, 0.2), 0px 2px 2px rgba(0, 0, 0, 0.15);
+}
+@media (max-width: 768px) {
+  #footer .footer .socialMedia-links .socialMedia-item a:active {
+    transform: scale(0.97);
+  }
+  #footer .footer .socialMedia-links .socialMedia-item a:active:before {
+    opacity: 0;
+  }
+  #footer .footer .socialMedia-links .socialMedia-item a:active::after {
+    opacity: 1;
+  }
+}
+@media (min-width: 768px) {
+  #footer .footer .socialMedia-links .socialMedia-item a:hover {
+    transform: scale(0.97);
+  }
+  #footer .footer .socialMedia-links .socialMedia-item a:hover:before {
+    opacity: 0;
+  }
+  #footer .footer .socialMedia-links .socialMedia-item a:hover::after {
+    opacity: 1;
+  }
 }
 #footer .footer .socialMedia-links .socialMedia-item.codepen a {
-  background-color: #000;
   color: #f4f4f4;
 }
+#footer .footer .socialMedia-links .socialMedia-item.codepen a::before {
+  background-image: linear-gradient(0deg, #000, #111);
+}
+#footer .footer .socialMedia-links .socialMedia-item.codepen a::after {
+  background-image: linear-gradient(0deg, #111, #000);
+}
 #footer .footer .socialMedia-links .socialMedia-item.linkedin a {
-  background: #0077b5;
+  background-color: #0074b3;
+}
+#footer .footer .socialMedia-links .socialMedia-item.linkedin a::before {
+  background: linear-gradient(#0074b3, #004266);
+}
+#footer .footer .socialMedia-links .socialMedia-item.linkedin a::after {
+  background: linear-gradient(#004266, #0074b3);
 }
 #footer .footer .socialMedia-links .socialMedia-item.twitter a {
   background: #1ca0f2;
+}
+#footer .footer .socialMedia-links .socialMedia-item.twitter a::before {
+  background: linear-gradient(#1ca0f2, #09669f);
+}
+#footer .footer .socialMedia-links .socialMedia-item.twitter a::after {
+  background: linear-gradient(#09669f, #1ca0f2);
 }
 #footer .footer .socialMedia-links .socialMedia-item.github a {
   background-color: #333;
   color: #f4f4f4;
 }
+#footer .footer .socialMedia-links .socialMedia-item.github a::before {
+  background: linear-gradient(#555, #333);
+}
+#footer .footer .socialMedia-links .socialMedia-item.github a::after {
+  background: linear-gradient(#333, #555);
+}
 #footer .footer .socialMedia-links .socialMedia-item.fcc a {
-  background: #0a0a23;
+  background-color: #0a0a23;
+}
+#footer .footer .socialMedia-links .socialMedia-item.fcc a::before {
+  background: linear-gradient(#161650, #0a0a23);
+}
+#footer .footer .socialMedia-links .socialMedia-item.fcc a::after {
+  background: linear-gradient(#0a0a23, #161650);
 }
 #footer .footer .socialMedia-links .socialMedia-item.fem a {
-  background: #ddd;
+  background: linear-gradient(whitesmoke, #cccccc);
   color: #111;
 }
 #footer .footer .socialMedia-links .socialMedia-item.fem a i {
   color: #000;
+}
+#footer .footer .socialMedia-links .socialMedia-item.fem a::before {
+  background: linear-gradient(whitesmoke, #cccccc);
+}
+#footer .footer .socialMedia-links .socialMedia-item.fem a::after {
+  background: linear-gradient(#cccccc, whitesmoke);
 }
 #footer .footer .brand {
   width: 80%;
