--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,6 +70,7 @@ section {
     text-align: center;
     // padding: .5em;
     font-family: $font-ubuntu;
+    font-family: $font-title;
     -webkit-box-reflect: below -.5rem linear-gradient(transparent, #0004);
 
     
